--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <style>
-        
-.themed-grid-col {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  background-color: rgba(86, 61, 124, .15);
-  border: 1px solid rgba(86, 61, 124, .2);
-}
+        .litepickerdiv {
+        height: 260px;
+        }        
+        .themed-grid-colx {
+        padding-top: .75rem;
+        padding-bottom: .75rem;
+        background-color: rgba(86, 61, 124, .15);
+        border: 1px solid rgba(86, 61, 124, .2);
+        }
 
-.themed-containerx {
-  padding: .75rem;
-  margin-bottom: 1.5rem;
-  background-color: rgba(0, 123, 255, .15);
-  border: 1px solid rgba(0, 123, 255, .2);
-}
+        .themed-containerx {
+        padding: .75rem;
+        margin-bottom: 1.5rem;
+        background-color: rgba(0, 123, 255, .15);
+        border: 1px solid rgba(0, 123, 255, .2);
+        }
     </style>
 
 </head>
@@ -52,8 +54,7 @@
         <div class="col-md-6 themed-grid-col">
             <img src="{{ url_for('static', filename = 'images/Room1.jpg') }}" class="rounded mx-auto d-block" width="500">
         </div>
-        <div class="col-md-6 themed-grid-col">
-            <label for="dummy" class="form-label"></label>
+        <div class="col-md-6 themed-grid-col litepickerdiv">
             <div id="litepicker"></div>
         </div>
 
@@ -98,7 +99,7 @@
 </div>
 
     <script>
-        window.disableLitepickerStyles = true;
+        // window.disableLitepickerStyles = true;
         var picker = new Litepicker({ element: document.getElementById('litepicker'),
             lang: 'fr-FR',
             singleMode: false,
@@ -124,8 +125,11 @@
             },
             onHide: function() { this.show(); }
         });
-        picker.show();
+        window.onresize = function(event) {
+            picker.show();;
+        };
 
 </script>
+
 </body>
 </html>
