--- a/templates/test.html
+++ b/templates/test.html
@@ -9,6 +9,8 @@
   <meta name="description" content="A friendly booking calendar">
   <meta name="author" content="Guy Olivier de Saint Albin">
 
+  <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/js/main.js"></script>
+  <link href="{{ url_for('static', filename = 'styles/style-max.css') }}" rel="stylesheet" type="text/css" media="all">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 
@@ -28,11 +30,44 @@
                 {% endfor %}
             </div>
             <div class="col-12">
+                <div id="litepicker"></div>
+            </div>
+            <div class="col-12">
                 {{ form.submit(class="btn btn-primary") }}
             </div>
         </form>
     </div>
 
+    <script>
+        // window.disableLitepickerStyles = true;
+        var picker = new Litepicker({ element: document.getElementById('litepicker'),
+            lang: 'fr-FR',
+            singleMode: false,
+            hotelMode: true,
+            numberOfMonths: 2,
+            numberOfColumns: 2,
+            moveByOneMonth: true,
+            disallowLockDaysInRange: true,
+            tooltipText: {
+                one: 'nuit',
+                other: 'nuits'
+            },
+            lockDays:  [['2020-12-18', '2021-01-01']],
+            bookedDays: [['2021-01-10', '2021-01-20']],
+            onSelect: function(date1, date2) {
+                this.show();
+                // document.getElementById("startDate").value = this.getStartDate();
+                // document.getElementById("endDate").value = this.getEndDate();
+                document.getElementById("startDate").value = new Date(this.getStartDate().getTime() - this.getStartDate().getTimezoneOffset()*60000).toISOString().substring(0,10);
+                document.getElementById("endDate").value = new Date(this.getEndDate().getTime() - this.getEndDate().getTimezoneOffset()*60000).toISOString().substring(0,10);
+                // document.getElementById("startDate").value = '2021-01-05 00:00:00';
+                // document.getElementById("endDate").value = '2021-01-05 00:00:00';
+            },
+            onHide: function() { this.show(); }
+        });
+        picker.show();
+
+</script>
 
 </body>
 </html>
