--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,7 @@
             },
             onHide: function() { this.show(); }
         });
+        picker.show();
         window.onresize = function(event) {
             picker.show();;
         };
