--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     {% endif %}
     {% endwith %}
 
-    <h1>Chambre tante Elodie</h1>
+    <h1>Chambre tante Elodie - updated today</h1>
 
     <form action="" method="post" class="row g-3 needs-validation" novalidate>
         {{ form.hidden_tag() }}
