--- a/templates/bookinglist.html
+++ b/templates/bookinglist.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE  html>
+<html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>Booking list</title>
@@ -12,8 +13,8 @@
 
         {% for booking in bookingList %}
         <div class="row border">
-            <div class="col-sm">{{booking.startDate.strftime('%Y-%m-%d')}}</div>
-            <div class="col-sm">{{booking.endDate.strftime('%Y-%m-%d')}}</div>
+            <div class="col-sm">{{booking.startDate}}</div>
+            <div class="col-sm">{{booking.endDate}}</div>
             <div class="col-sm">{{booking.room}}</div>
             <div class="col-sm">{{booking.name}}</div>
             <div class="col-sm">{{booking.mail}}</div>
